--- a/views/index.jade
+++ b/views/index.jade
@@ -1,6 +1,9 @@
 extends layout
 
 block content
+  //Import jQuery before materialize.js
+  script(type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js")
+  script(type="text/javascript" src="js/materialize.min.js")
   |<div id="container"/>
   //- inject:js
   script(src="/src/build.js")
