--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,6 +3,9 @@ html
     head
         title= title
         link(rel='stylesheet', href='/stylesheets/style.css')
+        link(type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection")
+        meta(name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no")
+
         script(src='http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js')
 
         script(src="http://fb.me/react-0.12.2.js")
