--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,6 @@
-/*.path {
-  outline: 2px dotted red;
-
-}*/
+/*
+ * css for d3 pie chart
+ * * */
 
 .rd3-piechart-text {
   opacity: 0;
@@ -20,6 +19,10 @@
   height: 100%;
   float: right;
 }
+
+/*
+ * css for tweets
+ *  * */
 
 blockquote.twitter-tweet {
   display: inline-block;
@@ -53,4 +56,39 @@ blockquote.twitter-tweet a {
 blockquote.twitter-tweet a:hover,
 blockquote.twitter-tweet a:focus {
   text-decoration: underline;
+}
+
+/*
+ * css for ReactCssTransitionGroup
+ * * */
+
+/* for when element enters the page */
+.example-enter {
+  opacity: 0.01;
+  transition: opacity .5s ease-in;
+}
+
+.example-enter.example-enter-active {
+  opacity: 1;
+}
+
+/* for when element leaves the page */
+.example-leave {
+  opacity: 1;
+  transition: opacity .5s ease-in;
+}
+
+.example-leave.example-leave-active {
+  opacity: 0.01;
+}
+
+/* for when componenet initiall mounts */
+/* use in conjunction with transitionAppear="true"*/
+.example-appear {
+  opacity: 0.5;
+  transition: opacity .5s ease-in;
+}
+
+.example-appear.example-appear-active {
+  opacity: 1;
 }
