--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -15,10 +15,32 @@
 }
 
 .tweet-container {
+  width: auto;
+  height: auto;
+  margin: 0 auto;
+  padding: 10px;
+  position: relative;
+  z-index: 0;
+}
+
+.charts-div {
+  width: 80%;
+  height: 100%;
+}
+
+.box-holder{
+  background-color:rgb(218, 218, 235);
   width: 25%;
   height: 100%;
   float: right;
+  z-index: -1;
 }
+
+/*
+div {
+  outline: red dotted;
+}*/
+
 
 /*
  * css for tweets
