--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -23,6 +23,11 @@
   z-index: 0;
 }
 
+/*.tweets {
+  height: 700px;
+  overflow: auto;
+}*/
+
 .charts-div {
   width: 80%;
   height: 100%;
@@ -35,12 +40,6 @@
   float: right;
   z-index: -1;
 }
-
-/*
-div {
-  outline: red dotted;
-}*/
-
 
 /*
  * css for tweets
@@ -87,7 +86,7 @@ blockquote.twitter-tweet a:focus {
 /* for when element enters the page */
 .example-enter {
   opacity: 0.5;
-  transition: opacity 1s ease-in;
+  transition: opacity .2s ease-in;
 }
 
 .example-enter.example-enter-active {
@@ -97,7 +96,7 @@ blockquote.twitter-tweet a:focus {
 /* for when element leaves the page */
 .example-leave {
   opacity: 1;
-  transition: opacity 1s ease-in;
+  transition: opacity .2s ease-in;
 }
 
 .example-leave.example-leave-active {
@@ -108,7 +107,7 @@ blockquote.twitter-tweet a:focus {
 /* use in conjunction with transitionAppear="true"*/
 .example-appear {
   opacity: 0.5;
-  transition: opacity .5s ease-in;
+  transition: opacity .2s ease-in;
 }
 
 .example-appear.example-appear-active {
