can now create multiple pie charts at once.

--- a/frontend/index.jade
+++ b/frontend/index.jade
@@ -6,12 +6,14 @@ block content
   script(type="text/javascript" src="js/materialize.min.js")
   |<div id="container"/>
   //- inject:js
-  |<script type="text/jsx" src="js/Charts.jsx"/>
   |<script type="text/jsx" src="js/App.jsx"/>
-  |<script type="text/jsx" src="js/TweetCollection.jsx"/>
-  |<script type="text/jsx" src="js/TweetContainer.jsx"/>
-
   |<script type="text/jsx" src="js/CountryList.jsx"/>
+  |<script type="text/jsx" src="js/Charts.jsx"/>
+  |<script type="text/jsx" src="js/ChartBuilder.jsx"/>
+
+  |<script type="text/jsx" src="js/TweetContainer.jsx"/>
+  |<script type="text/jsx" src="js/TweetCollection.jsx"/>
+
 
   |<script type="text/jsx" src="js/PieChart/Piechart.jsx"/>
   |<script type="text/jsx" src="js/PieChart/Arc.jsx"/>
