--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,7 +5,7 @@
 .rd3-piechart-text {
   opacity: 0;
   position: relative;
-
+  float: right;
 }
 
 .rd3-piechart-text:hover {
@@ -16,15 +16,16 @@
 
 .tweet-container {
   width: auto;
+  background-color:rgb(218, 218, 235);
   height: auto;
   margin: 0 auto;
-  padding: 10px;
+  padding: 15px;
   position: relative;
   z-index: 0;
 }
 
 .tweets {
-  height: 700px;
+  height: 550px;
   overflow: auto;
 }
 
@@ -33,10 +34,14 @@
   height: 100%;
 }
 
+.charts {
+  display: inline-block;
+}
+
 .box-holder{
   background-color:rgb(218, 218, 235);
   width: 25%;
-  height: 100%;
+  height: 550px;
   float: right;
   z-index: -1;
 }
