initialized socket.io

--- a/frontend/index.jade
+++ b/frontend/index.jade
@@ -27,3 +27,8 @@ block content
 
 
   //- endinject
+  |<script src="/socket.io/socket.io.js"></script>
+  |<script>
+  |  var socket = io();
+  |</script>
+
