--- a/views/index.jade
+++ b/views/index.jade
@@ -8,3 +8,8 @@ block content
   //- inject:js
   script(src="/src/build.js")
   //- endinject
+  |<script src="/socket.io/socket.io.js"></script>
+  |<script>
+  |  var socket = io();
+  |</script>
+
