fixed oman bug, can parse handle if user adds @ to start

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,11 +2,10 @@
  * css for d3 pie chart
  * * */
 
-.rd3-piechart-text {
+/*.rd3-piechart-text {
   opacity: 0;
   position: relative;
-  float: right;
-}
+}*/
 
 .rd3-piechart-text:hover {
   opacity: 1;
