--- a/frontend/index.jade
+++ b/frontend/index.jade
@@ -4,7 +4,7 @@ block content
   //Import jQuery before materialize.js
   script(type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js")
   script(type="text/javascript" src="js/materialize.min.js")
-  |<div id="container"/>
+  div(id="container")
   //- inject:js
   |<script type="text/jsx" src="js/App.jsx"/>
   |<script type="text/jsx" src="js/CountryList.jsx"/>
